--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit
-pandas
-scikit-learn
-tensorflow
-numpy
+numpy==1.21.6
+pandas==1.3.5
+scikit-learn==1.0.2
+tensorflow==2.9.2
+streamlit==1.15.2
